[package]
name = "epmon"
version = "0.1.0"
authors = ["sphereflow <johannprescher@gmx.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "epmon"
test = false
bench = false

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
  "colors",
] }
esp-hal = { version = "0.20", features = ["esp32c6", "embedded-hal", "async"] }
esp-println = { version = "0.11", features = ["esp32c6", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-hal-async = { version = "1" }
embedded-svc = { version = "0.28", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embassy-time = "0.3"
embassy-executor = { version = "0.6", features = ["task-arena-size-6144"] }
embassy-net = { version = "0.4", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
] }
embassy-sync = "0.6"
esp-hal-embassy = { version = "0.3", features = [
  "esp32c6",
  "log",
  "executors",
  "integrated-timers",
] }
esp-wifi = { version = "0.8", features = [
  "esp32c6",
  "phy-enable-usb",
  "utils",
  "wifi",
  "wifi-default",
  "embassy-net",
  "async",
] }
heapless = { version = "0.8.0", default-features = false }
critical-section = "1"
static_cell = "2.1"
esp-hal-smartled = "0.13"
smart-leds = "0.4"
rmodbus = { version = "0.9", default-features = false, features = ["heapless"] }

# smoltcp = { version = "0.11.0", default-features = false, features = [
#   "medium-ethernet",
#   "proto-dhcpv4",
#   "proto-igmp",
#   "proto-ipv4",
#   "socket-dhcpv4",
#   "socket-icmp",
#   "socket-raw",
#   "socket-tcp",
#   "socket-udp",
# ] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
